force-app/main/default/objects/PAGA_Payments__c/fields/Chargent_Order__c.field-meta.xml
<CustomField>
    <fullName>Chargent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargent Order</label>
    <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
    <relationshipLabel>PAGA Payments</relationshipLabel>
    <relationshipName>PAGA_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>