force-app/main/default/objects/PAGA_Payments__c/fields/Type_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Payment__c</fullName>
    <description>Type of Payment for the PAGA Payment</description>
    <inlineHelpText>Type of Payment for the PAGA Payment</inlineHelpText>
    <label>Type of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Penalty Payment</fullName>
            </value>
            <value>
                <fullName>Filing Fee</fullName>
                <label>Filing Fee from PAGA Filer</label>
            </value>
            <value>
                <fullName>Filing Fee from PAGA Employer</fullName>
            </value>
            <value>
                <fullName>Filing Fee from PAGA Employer Cure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>